tests/extensions/concurrency/valid/sema.wacc
begin
    sema s = sema(3)
end