tests/extensions/concurrency/syntaxErr/semaWrongType.wacc
begin
    sema s = sema('s')
end